--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "drupal/redirect": "^1.8",
         "drupal/smart_trim": "^2.0",
         "drupal/viewsreference": "^2.0@beta",
-        "drush/drush": "^11.5"
+        "drush/drush": "^11.5",
+        "kint-php/kint": "^5.0"
     },
     "conflict": {
         "drupal/drupal": "*"
