--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/pathauto": "^1.11",
         "drupal/redirect": "^1.8",
         "drupal/smart_trim": "^2.0",
+        "drupal/token": "^1.12",
         "drupal/viewsreference": "^2.0@beta",
         "drush/drush": "^11.5",
         "kint-php/kint": "^5.0"
